# convai-cli

./: .env.example  .gitignore  README.md  agents.json  example_agents.json  pyproject.toml
agent_configs/dev/: example_agent.json
elevenlabs-cli-tool/: main.py
elevenlabs_cli_tool/: elevenlabsapi.py  main.py
example_agent_configs/: docs_support_agent.json
tests/: test_elevenlabs_api.py  test_main.py  test_utils.py
