[tool.poetry]
name = "elevenlabs-cli-tool"
version = "0.1.0"
description = "CLI tool to manage ElevenLabs conversational AI agents"
authors = ["Angelo Giacco"]
packages = [{include = "elevenlabs_cli_tool"}]

[tool.poetry.dependencies]
python = "^3.8"
elevenlabs = "*"  # Replace with the actual version constraint if known, otherwise "*" is fine for now
typer = {extras = ["all"], version = "^0.9.0"} # Using version 0.9.0 as an example, adjust if needed

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.0"

[tool.poetry.scripts]
convai = "elevenlabs_cli_tool.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
